# SpellChecker

./: CMakeLists.txt  main.cpp
docs/: small_dictionary.txt
inc/: avl.h  binary_search_tree.h  bst.h  colours.h  dictionary.h  search_tree_base.h  spell_checker.h  timer.h  utils.h
output/: balanced_bst.txt
src/: binary_search_tree.h  dictionary.cpp  dictionary.h  main.cpp  spell_checker.cpp  spell_checker.h  utils.cpp
